# AUVSystem

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CommonEnums.cpp  CommonEnums.h  MetaParams.json  NodeBase.cpp  NodeBase.h  README.md  ROSEnums.cpp  ROSEnums.h  buildAll.sh  buildAllDebug.sh  buildAllRelease.sh  haller_gui.py  jsonCommonFunctions.cpp  jsonCommonFunctions.h  killAll.sh  node.dump  runAll.sh  simulationBuildDebug.sh  simulationBuildNoLQRDebug.sh  simulationBuildNoLQRRelease.sh  simulationBuildRelease.sh
AdditionalCameraProcessor/: CMakeLists.txt
AdditionalCameraProcessor/src/: AdditionalCameraProcessor.cpp  AdditionalCameraProcessor.h  ArduCam_Demo.cpp  CameraReceiver.cpp  CameraReceiver.h  main.cpp
Debug/: CMakeLists.txt
Debug/src/: Debug.cpp  Debug.h  Displayer.cpp  Displayer.h  main.cpp
Dummy/: CMakeLists.txt  Dummy.cpp
EffectorPositioning/src/: main.cpp
EmergencyRestartProtocol/: CMakeLists.txt  EmergencyRestartProtocol.cpp
HealthCheck/: CMakeLists.txt
HealthCheck/src/: HealthCheck.cpp  HealthCheck.h  main.cpp
MainLogic/: CMakeLists.txt
MainLogic/src/: CMakeLists.txt  MainLogic.cpp  MainLogic.h  Vehicle.cpp  main.cpp
MainLogic/src/StateMachine/: LogicCommonData.cpp  LogicCommonData.h  StateHandler.cpp  StateMachine.cpp  StateMachine.h  StateStack.cpp  StateStack.h
MainLogic/src/StateMachine/States/: StateBase.cpp  StateBase.h  StateDiveToDepth.cpp  StateDiveToDepth.h  StateEnums.cpp  StateEnums.h  StateFindGate.cpp  StateFindGate.h  StateGoLittleTowardsGate.cpp  StateGoLittleTowardsGate.h  StateIdle.cpp  StateIdle.h  StateMission.cpp  StateMission.h  StateTask1.cpp  StateTask1.h  StateTask2.cpp  StateTask2.h  SubStateBase.h
MainLogic/src/StateMachine/src/: StateMachine.h  main.cpp
ManipulatorControler/src/: StateHandler.cpp  main.cpp
PositioningSLAM/: CMakeLists.txt
PositioningSLAM/src/: PositioningSLAM.cpp  PositioningSLAM.h  main.cpp
RegulatorOptuning/: postprocessing.py  regulator_observer.py  regulator_optuning.py
StateMachine/: CMakeLists.txt
StateMachine/src/: StateHandler.h  StateMachine.h  main.cpp
TCPNode/: CMakeLists.txt
TCPNode/src/: TCPClient.cpp  TCPClient.h  TCPNode.cpp  TCPNode.h  jsonTCPFunctions.cpp  jsonTCPFunctions.h  main.cpp
ThrusterRegulator/: CMakeLists.txt
ThrusterRegulator/src/: LQRRegulator.cpp  LQRRegulator.h  ThrusterRegulator.cpp  ThrusterRegulator.h  VehiclePhysicalModel.cpp  VehiclePhysicalModel.h  main.cpp
TorpedoLaunching/src/: StateMachine.h
TrajectoryPlanner/: CMakeLists.txt
TrajectoryPlanner/src/: TrajectoryPlanner.cpp  TrajectoryPlanner.h  main.cpp  trajectory_planner.py
UDPNode/: CMakeLists.txt
UDPNode/src/: MessageProcessing.cpp  MessageProcessing.h  UDPNode.cpp  UDPNode.h  UDPServer.cpp  UDPServer.h  main.cpp
VideoProcessor/src/: Vehicle.h
